--- a/NyamNyam/View/Cell/Menu/Foods/FoodsVCCell.xib
+++ b/NyamNyam/View/Cell/Menu/Foods/FoodsVCCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,21 +13,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FoodsVCCell" customModule="NyamNyam" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="4Dd-Zi-Oyd">
-                        <rect key="frame" x="16" y="25" width="100" height="100"/>
+                        <rect key="frame" x="16" y="20" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="100" id="68B-8q-I1D"/>
                             <constraint firstAttribute="width" constant="100" id="sBO-Px-0KT"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jG2-jA-Z9m">
-                        <rect key="frame" x="249" y="104" width="110" height="30"/>
+                        <rect key="frame" x="249" y="98" width="110" height="30"/>
                         <color key="backgroundColor" red="0.99215686274509807" green="0.36078431372549019" blue="0.0039215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="ZtP-Dj-6he"/>
@@ -46,13 +46,13 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xyO-Gc-PK8">
-                        <rect key="frame" x="136" y="30" width="77.5" height="20.5"/>
+                        <rect key="frame" x="136" y="25" width="77.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eR3-PX-Az3">
-                        <rect key="frame" x="334" y="25" width="25" height="25"/>
+                        <rect key="frame" x="334" y="20" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="25" id="LkE-4d-0ef"/>
                             <constraint firstAttribute="height" constant="25" id="ovl-ze-6bM"/>
@@ -66,31 +66,35 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="250" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="d9V-mC-ftW">
-                        <rect key="frame" x="136" y="109" width="30.5" height="20.5"/>
+                        <rect key="frame" x="136" y="103" width="30.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3X3-2r-hWW">
-                        <rect key="frame" x="136" y="60" width="223" height="30"/>
+                        <rect key="frame" x="132" y="55" width="227" height="30"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N6g-dF-3V8">
-                                <rect key="frame" x="0.0" y="0.0" width="74.5" height="30"/>
-                                <state key="normal" title="-"/>
+                                <rect key="frame" x="0.0" y="0.0" width="75.5" height="30"/>
+                                <state key="normal" title="-">
+                                    <color key="titleColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="leftButtonClick:" destination="gTV-IL-0wX" eventType="touchUpInside" id="A2V-hD-ShZ"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KvC-TH-Udc">
-                                <rect key="frame" x="74.5" y="0.0" width="74" height="30"/>
+                                <rect key="frame" x="75.5" y="0.0" width="76" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cc7-bx-iax">
-                                <rect key="frame" x="148.5" y="0.0" width="74.5" height="30"/>
-                                <state key="normal" title="+"/>
+                                <rect key="frame" x="151.5" y="0.0" width="75.5" height="30"/>
+                                <state key="normal" title="+">
+                                    <color key="titleColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="rightButtonClick:" destination="gTV-IL-0wX" eventType="touchUpInside" id="hDE-2v-xRT"/>
                                 </connections>
@@ -105,16 +109,16 @@
                 <constraint firstItem="3X3-2r-hWW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="xyO-Gc-PK8" secondAttribute="bottom" constant="8" id="7bj-S2-vcq"/>
                 <constraint firstItem="eR3-PX-Az3" firstAttribute="trailing" secondItem="jG2-jA-Z9m" secondAttribute="trailing" id="GTv-dL-H0B"/>
                 <constraint firstItem="eR3-PX-Az3" firstAttribute="centerY" secondItem="xyO-Gc-PK8" secondAttribute="centerY" constant="-2.75" id="PLe-Gm-XVo"/>
-                <constraint firstItem="d9V-mC-ftW" firstAttribute="leading" secondItem="4Dd-Zi-Oyd" secondAttribute="trailing" constant="20" id="QEt-Dh-V5z"/>
                 <constraint firstItem="eR3-PX-Az3" firstAttribute="top" secondItem="4Dd-Zi-Oyd" secondAttribute="top" id="SL0-dd-89L"/>
                 <constraint firstItem="3X3-2r-hWW" firstAttribute="centerY" secondItem="4Dd-Zi-Oyd" secondAttribute="centerY" id="TG8-6Z-pll"/>
-                <constraint firstItem="3X3-2r-hWW" firstAttribute="leading" secondItem="4Dd-Zi-Oyd" secondAttribute="trailing" constant="20" id="V4C-Id-gjg"/>
+                <constraint firstItem="3X3-2r-hWW" firstAttribute="leading" secondItem="4Dd-Zi-Oyd" secondAttribute="trailing" constant="16" id="V4C-Id-gjg"/>
                 <constraint firstAttribute="trailing" secondItem="3X3-2r-hWW" secondAttribute="trailing" constant="16" id="WL6-M3-pw8"/>
                 <constraint firstItem="jG2-jA-Z9m" firstAttribute="centerY" secondItem="d9V-mC-ftW" secondAttribute="centerY" id="fba-sR-HJg"/>
+                <constraint firstItem="d9V-mC-ftW" firstAttribute="leading" secondItem="xyO-Gc-PK8" secondAttribute="leading" id="gt6-ne-8aj"/>
                 <constraint firstItem="4Dd-Zi-Oyd" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="iMW-KX-TOH"/>
                 <constraint firstItem="4Dd-Zi-Oyd" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="lHd-op-MMk"/>
                 <constraint firstItem="eR3-PX-Az3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xyO-Gc-PK8" secondAttribute="trailing" constant="16" id="loT-fW-SPf"/>
-                <constraint firstItem="jG2-jA-Z9m" firstAttribute="bottom" secondItem="4Dd-Zi-Oyd" secondAttribute="bottom" constant="9" id="mLJ-kd-NPj"/>
+                <constraint firstItem="jG2-jA-Z9m" firstAttribute="bottom" secondItem="4Dd-Zi-Oyd" secondAttribute="bottom" constant="8" id="mLJ-kd-NPj"/>
                 <constraint firstItem="xyO-Gc-PK8" firstAttribute="leading" secondItem="4Dd-Zi-Oyd" secondAttribute="trailing" constant="20" id="ppf-QK-R5j"/>
                 <constraint firstItem="jG2-jA-Z9m" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="d9V-mC-ftW" secondAttribute="trailing" constant="8" id="sEP-ZF-qcw"/>
             </constraints>
@@ -130,7 +134,7 @@
                 <outlet property="tripperLabel" destination="KvC-TH-Udc" id="0ez-8k-TzC"/>
                 <outlet property="weightLabel" destination="d9V-mC-ftW" id="ddP-Rl-zJO"/>
             </connections>
-            <point key="canvasLocation" x="-105" y="139"/>
+            <point key="canvasLocation" x="-78" y="80"/>
         </collectionViewCell>
     </objects>
     <resources>
