--- a/NyamNyam/View/Base.lproj/Main.storyboard
+++ b/NyamNyam/View/Base.lproj/Main.storyboard
@@ -61,31 +61,33 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.93725490196078431" green="0.92941176470588238" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c14-Vl-cVV">
-                                    <size key="itemSize" width="249" height="206"/>
+                                    <size key="itemSize" width="191" height="159"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="menuItemIdentifier" reuseIdentifier="menuItemIdentifier" id="8O6-HI-lx7" customClass="MenuCell" customModule="NyamNyam" customModuleProvider="target">
-                                        <rect key="frame" x="63" y="0.0" width="249" height="206"/>
+                                        <rect key="frame" x="92" y="0.0" width="191" height="159"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="249" height="206"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="191" height="159"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="249" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="mu4-RP-7Wu">
-                                                    <rect key="frame" x="16" y="16" width="217" height="138"/>
+                                                    <rect key="frame" x="0.0" y="16" width="191" height="91"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Основные блюда" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="bWa-1e-aPR">
-                                                    <rect key="frame" x="16" y="154" width="217" height="44"/>
+                                                <label userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Основные блюда" textAlignment="center" lineBreakMode="wordWrap" minimumFontSize="15" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bWa-1e-aPR">
+                                                    <rect key="frame" x="8" y="107" width="175" height="44"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="n3g-mE-DEg"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="20"/>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="27"/>
                                                     <color key="textColor" red="0.98039215690000003" green="0.36862745099999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
+                                                    <color key="highlightedColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="shadowColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <size key="shadowOffset" width="0.0" height="0.0"/>
                                                 </label>
                                             </subviews>
@@ -93,12 +95,12 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="mu4-RP-7Wu" firstAttribute="top" secondItem="8O6-HI-lx7" secondAttribute="top" constant="16" id="4XK-2T-1PM"/>
-                                            <constraint firstItem="mu4-RP-7Wu" firstAttribute="leading" secondItem="8O6-HI-lx7" secondAttribute="leading" constant="16" id="IYa-ET-5TI"/>
+                                            <constraint firstItem="mu4-RP-7Wu" firstAttribute="leading" secondItem="8O6-HI-lx7" secondAttribute="leading" id="IYa-ET-5TI"/>
                                             <constraint firstAttribute="bottom" secondItem="bWa-1e-aPR" secondAttribute="bottom" constant="8" id="SGZ-B6-oEz"/>
-                                            <constraint firstItem="bWa-1e-aPR" firstAttribute="leading" secondItem="8O6-HI-lx7" secondAttribute="leading" constant="16" id="b2W-MC-5be"/>
+                                            <constraint firstItem="bWa-1e-aPR" firstAttribute="leading" secondItem="8O6-HI-lx7" secondAttribute="leading" constant="8" id="b2W-MC-5be"/>
                                             <constraint firstItem="bWa-1e-aPR" firstAttribute="top" secondItem="mu4-RP-7Wu" secondAttribute="bottom" id="eyl-zi-AFM"/>
-                                            <constraint firstAttribute="trailing" secondItem="bWa-1e-aPR" secondAttribute="trailing" constant="16" id="g2Z-jK-XcA"/>
-                                            <constraint firstAttribute="trailing" secondItem="mu4-RP-7Wu" secondAttribute="trailing" constant="16" id="kcX-xj-UQ5"/>
+                                            <constraint firstAttribute="trailing" secondItem="bWa-1e-aPR" secondAttribute="trailing" constant="8" id="g2Z-jK-XcA"/>
+                                            <constraint firstAttribute="trailing" secondItem="mu4-RP-7Wu" secondAttribute="trailing" id="kcX-xj-UQ5"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="menuItemImage" destination="mu4-RP-7Wu" id="gDF-tF-Bge"/>
@@ -353,7 +355,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="rT3-9J-go5">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <connections>
                         <segue destination="d9n-qe-2hK" kind="relationship" relationship="rootViewController" id="Jqm-sk-eXx"/>
@@ -420,7 +422,7 @@
                         <sections>
                             <tableViewSection footerTitle=" " id="Kwt-SC-kU3">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" alpha="0.10000000000000001" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" showsReorderControl="YES" accessoryType="disclosureIndicator" indentationWidth="10" id="T5P-6d-EX1">
+                                    <tableViewCell clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="0.0" id="T5P-6d-EX1">
                                         <rect key="frame" x="0.0" y="240" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T5P-6d-EX1" id="sMM-Nl-VNR">
@@ -460,7 +462,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="separatorInset" minX="60" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" alpha="0.59999999999999998" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" showsReorderControl="YES" accessoryType="disclosureIndicator" indentationWidth="10" id="jrM-Ss-KJg">
+                                    <tableViewCell clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="0.0" id="jrM-Ss-KJg">
                                         <rect key="frame" x="0.0" y="284" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jrM-Ss-KJg" id="DZK-zE-MSG">
@@ -498,7 +500,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="separatorInset" minX="60" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" alpha="0.59999999999999998" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" indentationWidth="0.0" id="pgC-1N-XAS">
+                                    <tableViewCell clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" indentationWidth="0.0" id="pgC-1N-XAS">
                                         <rect key="frame" x="0.0" y="328" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pgC-1N-XAS" id="0qO-DG-bUk">
@@ -536,7 +538,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="separatorInset" minX="60" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" alpha="0.29999999999999999" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="eB1-gf-4Qc">
+                                    <tableViewCell clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="0.0" id="eB1-gf-4Qc">
                                         <rect key="frame" x="0.0" y="372" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eB1-gf-4Qc" id="POR-Yr-kJ1">
@@ -572,6 +574,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <inset key="separatorInset" minX="60" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                 </cells>
@@ -670,7 +673,7 @@
         <!--Navigation Controller-->
         <scene sceneID="naE-XQ-z2u">
             <objects>
-                <navigationController id="rHG-Nh-je0" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="LoginNavigation" id="rHG-Nh-je0" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ng7-NE-kAt">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -751,7 +754,7 @@
         <!--Navigation Controller-->
         <scene sceneID="XL1-Rv-FY1">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NFE-CY-slV" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="DishOrder" automaticallyAdjustsScrollViewInsets="NO" id="NFE-CY-slV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EBn-8S-tax">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -770,7 +773,7 @@
         <!--Navigation Controller-->
         <scene sceneID="0W3-ib-VlO">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="T8u-Xc-U9P" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="Reservation" automaticallyAdjustsScrollViewInsets="NO" id="T8u-Xc-U9P" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="l9z-Af-x2a">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
